# Piano

./: .gitignore  CMakeLists.txt  Piano_zh_CN.ts  README.md
.github/workflows/: windows-ci.yml
assets/: default.keyboard  demo.in
assets/regression/: ordered.in
cmake/toolchains/: windows-msvc.cmake
docs/guides/: README.md  code-overview.md  quick-start.md  troubleshooting.md
docs/legacy/: architecture.md  file-by-file-notes.md  gap-and-risk.md  overview.md
docs/rebuild/: build-and-release.md  m1-implementation-notes.md  m2-implementation-notes.md  m3-implementation-notes.md  m4-implementation-notes.md  m5-implementation-notes.md  m6-implementation-notes.md  m7-implementation-notes.md  migration-plan.md  target-architecture.md  tech-selection.md
docs/roadmap/: README.md  future-plan.md
docs/specs/: README.md  spec-001-keyboard-and-note-mapping.md  spec-002-audio-output-and-latency.md  spec-003-song-playback-and-script-format.md  spec-004-midi-in-out-and-vsti.md  spec-005-ui-alpha.md  spec-006-export-and-observability.md
include/piano/app/: application.h  audio_backend_factory.h  error_codes.h  playback_service.h
include/piano/audio/: dsound_output_sink.h  log_output_sink.h  midi_output_sink.h  output_sink.h  vsti_output_sink.h  wasapi_output_sink.h
include/piano/engine/: score_scheduler.h
include/piano/export/: wav_exporter.h
include/piano/input/: keyboard_map.h
include/piano/platform/: config_store.h
include/piano/score/: score_parser.h
include/piano/ui/: gui_app.h
include/piano/ui/panels/: control_panel.h  keyboard_panel.h
scripts/: build.ps1  ci-local-check.ps1  configure.ps1  package.ps1  run-demo.ps1  run-gui-smoke.ps1  smoke-export.ps1  smoke-midiout.ps1  smoke-vsti.ps1  smoke-wasapi.ps1  verify-package.ps1
src/app/: application.cpp  audio_backend_factory.cpp  main.cpp  playback_service.cpp
src/audio/: dsound_output_sink.cpp  log_output_sink.cpp  midi_output_sink.cpp  vsti_output_sink.cpp  wasapi_output_sink.cpp
src/engine/: score_scheduler.cpp
src/export/: wav_exporter.cpp
src/input/: keyboard_map.cpp
src/platform/: config_store.cpp
src/score/: score_parser.cpp
src/ui/: gui_app.cpp  gui_main.cpp
src/ui/panels/: control_panel.cpp  keyboard_panel.cpp
tests/: test_main.cpp
